[project]
name = "promotdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "gradio>=6.4.0",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.1.25",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=6.6.2",
    "pytz>=2025.2",
]
